Fix fr translation

--- a/addon/locale/fr/LC_MESSAGES/nvda.po
+++ b/addon/locale/fr/LC_MESSAGES/nvda.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: 'charInfo' '1.0dev'\n"
 "Report-Msgid-Bugs-To: 'nvda-translations@freelists.org'\n"
 "POT-Creation-Date: 2019-08-24 23:06+0200\n"
-"PO-Revision-Date: 2019-08-24 23:08+0200\n"
+"PO-Revision-Date: 2019-08-28 14:51+0200\n"
 "Last-Translator: Cyrille Bougot <cyrille.bougot2@laposte.net>\n"
 "Language-Team: \n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.12\n"
+"X-Generator: Poedit 2.0.6\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #. Translators: Title on the char info displayed message
@@ -108,7 +108,7 @@ msgid ""
 "Presents a message with detailed information on the character of the current "
 "navigator object where the review cursor is situated."
 msgstr ""
-"affiche des informations sur le caractère de l'objet navigateur courant à la "
+"Affiche des informations sur le caractère de l'objet navigateur courant à la "
 "position du curseur de revue."
 
 #. Add-on summary, usually the user visible name of the addon.
