--- a/addon/locale/ru/LC_MESSAGES/nvda.po
+++ b/addon/locale/ru/LC_MESSAGES/nvda.po
@@ -1,88 +1,182 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the charInfo package.
+# This file is distributed under the same license as the 'charInfo' package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: charInfo 1.6\n"
-"Report-Msgid-Bugs-To: nvda-translations@groups.io\n"
-"POT-Creation-Date: 2021-07-21 10:22+0000\n"
-"PO-Revision-Date: 2021-08-03 16:18+0200\n"
-"Language: ru\n"
+"Project-Id-Version: 'charInfo' '2.3'\n"
+"Report-Msgid-Bugs-To: 'nvda-translations@groups.io'\n"
+"POT-Creation-Date: 2023-06-23 09:34+0300\n"
+"PO-Revision-Date: 2024-02-14 07:57+0300\n"
+"Last-Translator: Danil Kostenkov <danilkostenkov38@gmail.com>\n"
+"Language-Team: \n"
+"Language: ru_RU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: \n"
-"Language-Team: \n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.4.2\n"
 
 #. Translators: Title on the char info displayed message
-msgid "Detailed character information'"
-msgstr "Подробная информация о символе»"
+msgid "Detailed character information"
+msgstr "Подробная информация о символе"
+
+#. Translators: Reported in the tables when no value is defined for a property of a specific character.
+msgid "[Not defined]"
+msgstr "[Не определено]"
+
+#. Translators: Reported in the symbol and character description tables when no file corresponding to the row
+#. exists.
+msgid "[No file]"
+msgstr "[Нет файла]"
+
+#. Translators: A character attribute type in the Unicode table of the char info displayed message
+msgid "Character"
+msgstr "Символ"
+
+#. Translators: A character attribute type in the Unicode table of the char info displayed message
+msgid "Name"
+msgstr "Название"
+
+#. Translators: A character attribute type in the Unicode table of the char info displayed message
+msgid "CLDR name"
+msgstr "Название CLDR"
+
+#. Translators: A character attribute type in the Unicode table of the char info displayed message
+msgid "Decimal value"
+msgstr "Десятичное значение"
+
+#. Translators: A character attribute type in the Unicode table of the char info displayed message
+msgid "Hex value"
+msgstr "Шестнадцатиричное значение"
+
+#. Translators: A character attribute type in the Unicode table of the char info displayed message
+msgid "Category"
+msgstr "Категорія"
+
+#. Translators: A character attribute type in the Unicode table of the char info displayed message
+msgid "Block"
+msgstr "Юникодовый блок"
+
+#. Translators: A character attribute type in the MS font table of the char info displayed message
+msgid "MS name"
+msgstr "Название MS"
+
+#. Translators: A character attribute type in the MS font table of the char info displayed message
+msgid "MS Font"
+msgstr "Шрифт MS"
+
+#. Translators: A character attribute type in the MS font table of the char info displayed message
+msgid "Equivalent Unicode character name"
+msgstr "Эквивалентное название символа Юникода"
+
+#. Translators: A character attribute type in the MS font table of the char info displayed message
+msgid "Equivalent Unicode character hex value"
+msgstr "Эквивалентное шестнадцатиричное значение символа Юникода"
+
+#. Translators: A character attribute type in the MS font table of the char info displayed message
+msgid "Equivalent Unicode character decimal value"
+msgstr "Эквивалентное десятичное значение символа Юникода"
+
+#. Translators: A symbol attribute type in the table on the char info displayed message
+msgid "Symbol description"
+msgstr "Описание символа"
+
+#. Translators: A symbol attribute type in the table on the char info displayed message
+#, python-brace-format
+msgid "Symbol description in user file ({lang})"
+msgstr "Описание символа в пользовательском файле ({lang})"
+
+#. Translators: A symbol attribute type in the table on the char info displayed message
+#, python-brace-format
+msgid "Symbol description in locale file{langInfo}"
+msgstr "Описание символа в файле локализации{langInfo}"
+
+#. Translators: A symbol attribute type in the table on the char info displayed message
+#, python-brace-format
+msgid "Symbol description in locale CLDR file{langInfo}"
+msgstr "Описание символа в файле локализации CLDR{langInfo}"
+
+#. Translators: A symbol attribute type in the table on the char info displayed message
+msgid "Symbol description in English file"
+msgstr "Описание символов в файле на английском языке"
+
+#. Translators: A symbol attribute type in the table on the char info displayed message
+msgid "Symbol description in English CLDR file"
+msgstr "Описание символов в файле CLDR на английском языке"
+
+#. Translators: A character attribute type in the table on the char info displayed message
+msgid "Character description"
+msgstr "Описание символа"
+
+#. Translators: A character attribute type in the table on the char info displayed message
+#, python-brace-format
+msgid "Character description{langInfo}"
+msgstr "Описание символа {langInfo}"
+
+#. Translators: A character attribute type in the table on the char info displayed message
+msgid "Character description (English file)"
+msgstr "Описание символа (файл на английском языке)"
+
+#. Translators: A section name in the char info displayed message
+msgid "Unicode"
+msgstr "Юнікод"
+
+#. Translators: A section name in the char info displayed message
+msgid "Microsoft font"
+msgstr "Шрифт Microsoft"
+
+#. Translators: A section name in the char info displayed message
+msgid "Symbol description in NVDA"
+msgstr "Описание символа в NVDA"
+
+#. Translators: A section name in the char info displayed message
+msgid "Character description in NVDA"
+msgstr "Описание символа в NVDA"
+
+#. Translators: Reported in the Unicode information table when the character does not belong to any block.
+msgid "No Block"
+msgstr "Нет блока"
+
+#. Translators: The value of an option reported in symbol description section of the character info report.
+msgid "On"
+msgstr "Включено"
+
+#. Translators: The value of an option reported in symbol description section of the character info report.
+msgid "Off"
+msgstr "Выключено"
+
+#. Translators: A column header on the char info displayed message
+msgid "Value"
+msgstr "Значение"
+
+#. Translators: A column title on the char info displayed message
+#, python-brace-format
+msgid "Character {numChar}"
+msgstr "Символ {numChar}"
 
 #. Translators: A column title on the char info displayed message
 msgid "Attribute"
 msgstr "Атрибут"
 
-#. Translators: A column title on the char info displayed message
-msgid "Value"
-msgstr "Значение"
+#. Translators: A piece of text in the symbol description section of the character info report.
+msgid "Options used to compute the symbol:"
+msgstr "Параметры, используемые для вычисления символа:"
 
-#. Translators: A character attribute type in the table on the char info displayed message
-msgid "Character"
-msgstr "Символ"
+#. Translators: An option text in the symbol description section of the character info report.
+msgid "Voice language"
+msgstr "Язык голоса"
 
-#. Translators: A character attribute type in the table on the char info displayed message
-msgid "Name"
-msgstr "Название"
-
-#. Translators: A character attribute type in the table on the char info displayed message
-msgid "CLDR name"
-msgstr "Название CLDR"
-
-#. Translators: A character attribute type in the table on the char info displayed message
-msgid "Decimal value"
-msgstr "десятиричное значение"
-
-#. Translators: A character attribute type in the table on the char info displayed message
-msgid "Hex value"
-msgstr "шестнадцатиричное значение"
-
-#. Translators: A character attribute type in the table on the char info displayed message
-msgid "Category"
-msgstr "Категория"
-
-#. Translators: A character attribute type in the table on the char info displayed message
-msgid "Block"
-msgstr "Юникодовый блок"
-
-#. Translators: A character attribute type in the table on the char info displayed message
-msgid "MS name"
-msgstr "Название MS"
-
-#. Translators: A character attribute type in the table on the char info displayed message
-msgid "MS Font"
-msgstr "Шрифт MS"
-
-#. Translators: A character attribute type in the table on the char info displayed message
-msgid "Equivalent Unicode character name"
-msgstr "Эквивалентное имя символа Юникода"
-
-#. Translators: A character attribute type in the table on the char info displayed message
-msgid "Equivalent Unicode character hex value"
-msgstr "Эквивалентное шестнадцатиричное значение символа Юникода"
-
-#. Translators: A character attribute type in the table on the char info displayed message
-msgid "Equivalent Unicode character decimal value"
-msgstr "Эквивалентное десятиричное значение символа Юникода"
+#. Translators: An option text in the symbol description section of the character info report.
+msgid "NVDA interface language"
+msgstr "Язык NVDA"
 
 #. Translators: A part of the message presented in input help mode.
 msgid ""
 ". Pressing four times presents a message with detailed information on this "
 "character."
 msgstr ""
-". При нажатии четыре раза появляется сообщение с подробной информацией об "
+". Если нажать четыре раза, появится сообщение с подробной информацией об "
 "этом символе."
 
 #. Translators: The message presented in input help mode.
@@ -90,31 +184,32 @@ msgid ""
 "Presents a message with detailed information on the character of the current "
 "navigator object where the review cursor is situated."
 msgstr ""
-"Представляет сообщение с подробными сведениями о характере текущего объекта "
-"навигатора, в котором расположен просмотровый курсор."
+"Показывает сообщение с подробной информацией о символе текущего объекта "
+"навигатора, на котором находится просмотровый курсор."
+
+#. Translators: The message presented in input help mode.
+msgid "Opens Character Information add-on settings"
+msgstr "Открывает настройки дополнения"
 
 #. Translators: Reported when there is no caret
 msgid "No caret"
-msgstr "Без каретки"
+msgstr "Нет каретки"
 
 #. Translators: The message presented in input help mode.
 msgid ""
 "Presents a message with detailed information on the character at the "
 "position of the caret."
-msgstr ""
-"Представляет сообщение с подробной информацией о характере в положении "
-"каретки."
+msgstr "Показывает сообщение с подробной информацией о символе под кареткой."
 
 #. Add-on summary, usually the user visible name of the addon.
-#. Translators: Summary for this add-on to be shown on installation and add-on information.
+#. Translators: Summary for this add-on
+#. to be shown on installation and add-on information found in Add-ons Manager.
 msgid "Character information"
 msgstr "Информация о символе"
 
 #. Add-on description
 #. Translators: Long description to be shown for this add-on on add-on information from add-ons manager
 msgid ""
-"This add-on allows to present in a message character information such as "
-"unicode name, number, category, etc.\n"
-msgstr ""
-"Это дополнение позволяет представлять в сообщении и информацию о символе, "
-"такую как имя юникода, число, категория и т.д.\n"
+"This add-on allows to present in a message various information about a "
+"character.\n"
+msgstr "Это дополнение предоставляет различную информацию о символе.\n"
