--- a/addon/globalPlugins/charinfo/locale/fr/noms_blocs_v160.txt
+++ b/addon/globalPlugins/charinfo/locale/fr/noms_blocs_v160.txt
@@ -183,6 +183,7 @@ FFF0-FFFF     ; Specials                                                ; Caract
 10500-1052F   ; Elbasan                                                 ; Elbasan
 10530-1056F   ; Caucasian Albanian                                      ; Albanien
 10570-105BF   ; Vithkuqi                                                ; Vithkuqi
+105C0-105FF   ; Todhri                                                  ; Todhri
 10600-1077F   ; Linear A                                                ; Linéaire A
 10780-107BF   ; Latin Extended-F                                        ; Latin étendu F
 10800-1083F   ; Cypriot Syllabary                                       ; Syllabaire chypriote
@@ -205,6 +206,7 @@ FFF0-FFFF     ; Specials                                                ; Caract
 10C00-10C4F   ; Old Turkic                                              ; Vieux-turc
 10C80-10CFF   ; Old Hungarian                                           ; Runes hongroises
 10D00-10D3F   ; Hanifi Rohingya                                         ; Rohingya hanifi
+10D40-10D8F   ; Garay                                                   ; Garay
 10E60-10E7F   ; Rumi Numeral Symbols                                    ; Symboles numéraux rûmî
 10E80-10EBF   ; Yezidi                                                  ; Yézidi
 10EC0-10EFF   ; Arabic Extended-C                                       ; Arabe étendu C
@@ -224,12 +226,14 @@ FFF0-FFFF     ; Specials                                                ; Caract
 11280-112AF   ; Multani                                                 ; Multanais
 112B0-112FF   ; Khudawadi                                               ; Khudawadi
 11300-1137F   ; Grantha                                                 ; Grantha
+11380-113FF   ; Tulu-Tigalari                                           ; Toulou-tigalari
 11400-1147F   ; Newa                                                    ; Néwar
 11480-114DF   ; Tirhuta                                                 ; Tirhuta
 11580-115FF   ; Siddham                                                 ; Siddham
 11600-1165F   ; Modi                                                    ; Modi
 11660-1167F   ; Mongolian Supplement                                    ; Supplément mongol
 11680-116CF   ; Takri                                                   ; Takri
+116D0-116FF   ; Myanmar Extended-C                                      ; Birman étendu C
 11700-1174F   ; Ahom                                                    ; Âhom
 11800-1184F   ; Dogra                                                   ; Dogra
 118A0-118FF   ; Warang Citi                                             ; Varang kchiti
@@ -240,6 +244,7 @@ FFF0-FFFF     ; Specials                                                ; Caract
 11AB0-11ABF   ; Unified Canadian Aboriginal Syllabics Extended-A        ; Syllabaires autochtones canadiens étendus A
 11AC0-11AFF   ; Pau Cin Hau                                             ; Pau cin hau
 11B00-11B5F   ; Devanagari Extended-A                                   ; Dévanâgarî étendue A
+11BC0-11BFF   ; Sunuwar                                                 ; Sounwar
 11C00-11C6F   ; Bhaiksuki                                               ; Bhaiksuki
 11C70-11CBF   ; Marchen                                                 ; Marchen
 11D00-11D5F   ; Masaram Gondi                                           ; Gondi de Masaram
@@ -254,12 +259,15 @@ FFF0-FFFF     ; Specials                                                ; Caract
 12F90-12FFF   ; Cypro-Minoan                                            ; Chypro-minoen
 13000-1342F   ; Egyptian Hieroglyphs                                    ; Hiéroglyphes égyptiens
 13430-1345F   ; Egyptian Hieroglyph Format Controls                     ; Caractères de formatage des hiéroglyphes égyptiens
+13460-143FF   ; Egyptian Hieroglyphs Extended-A                         ; Hiéroglyphes égyptiens étendus A
 14400-1467F   ; Anatolian Hieroglyphs                                   ; Hiéroglyphes anatoliens
+16100-1613F   ; Gurung Khema                                            ; Gouroung khema
 16800-16A3F   ; Bamum Supplement                                        ; Supplément bamoum
 16A40-16A6F   ; Mro                                                     ; Mro
 16A70-16ACF   ; Tangsa                                                  ; Tangsa
 16AD0-16AFF   ; Bassa Vah                                               ; Vah bassa
 16B00-16B8F   ; Pahawh Hmong                                            ; Pahawh hmong
+16D40-16D7F   ; Kirat Rai                                               ; Kirat rai
 16E40-16E9F   ; Medefaidrin                                             ; Médéfaïdrine
 16F00-16F9F   ; Miao                                                    ; Miao
 16FE0-16FFF   ; Ideographic Symbols and Punctuation                     ; Symboles et ponctuation idéographiques
@@ -274,6 +282,7 @@ FFF0-FFFF     ; Specials                                                ; Caract
 1B170-1B2FF   ; Nushu                                                   ; Nüshu
 1BC00-1BC9F   ; Duployan                                                ; Sténographie Duployé
 1BCA0-1BCAF   ; Shorthand Format Controls                               ; Formatage de sténographie
+1CC00-1CEBF   ; Symbols for Legacy Computing Supplement                 ; Supplément de symboles informatiques patrimoniaux
 1CF00-1CFCF   ; Znamenny Musical Notation                               ; Notation musicale znamenny
 1D000-1D0FF   ; Byzantine Musical Symbols                               ; Symboles musicaux byzantins
 1D100-1D1FF   ; Musical Symbols                                         ; Symboles musicaux
@@ -291,6 +300,7 @@ FFF0-FFFF     ; Specials                                                ; Caract
 1E290-1E2BF   ; Toto                                                    ; Toto
 1E2C0-1E2FF   ; Wancho                                                  ; Wantcho
 1E4D0-1E4FF   ; Nag Mundari                                             ; Nag mundari
+1E5D0-1E5FF   ; Ol Onal                                                 ; Ol onal
 1E7E0-1E7FF   ; Ethiopic Extended-B                                     ; Éthiopien étendu B
 1E800-1E8DF   ; Mende Kikakui                                           ; Mendé kikakui
 1E900-1E95F   ; Adlam                                                   ; Adlam
@@ -319,6 +329,7 @@ FFF0-FFFF     ; Specials                                                ; Caract
 2B740-2B81D   ; CJK Unified Ideographs Extension D                      ; Supplément D aux idéogrammes unifiés CJC
 2B820-2CEA1   ; CJK Unified Ideographs Extension E                      ; Supplément E aux idéogrammes unifiés CJC
 2CEB0-2EBE0   ; CJK Unified Ideographs Extension F                      ; Supplément F aux idéogrammes unifiés CJC
+2EBF0-2EE5D   ; CJK Unified Ideographs Extension I                      ; Supplément I aux idéogrammes unifiés CJC
 2F800-2FA1F   ; CJK Compatibility Ideographs Supplement                 ; Supplément aux idéogrammes de compatibilité CJC
 2FF80-2FFFF   ; Unassigned                                              ; Points de code non attribués
 30000-3134A   ; CJK Unified Ideographs Extension G                      ; Supplément G aux idéogrammes unifiés CJC
